# stratoceph

./: CMakeLists.txt  README.md  conanfile.py  run.zsh
include/stratoceph/: stratoceph.h
include/stratoceph/imgui/: html_msg.hpp
include/stratoceph/ncurses/: html_msg.hpp
src/: stratoceph.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
